HTML de los artículos

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -111,6 +111,54 @@
             </div>
         </aside>
         <!-- Fin Barra Lateral -->
+
+        <!-- Inicio Artículos -->
+        <section id="articles">
+            <h2>Últimos artículos</h2>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4><a href="#">Título del artículo</a></h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4><a href="#">Título del artículo</a></h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4><a href="#">Título del artículo</a></h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4><a href="#">Título del artículo</a></h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoría: Pruebas</span>
+                </div>
+                <h4><a href="#">Título del artículo</a></h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
+            </article>
+            <article><a href="#">Ir al blog</a></article>
+        </section>
+
+        <!-- Fin Artículos -->
     </section>
     
 </body>
