--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -115,6 +115,7 @@
         <!-- Inicio Artículos -->
         <section id="articles">
             <h2>Últimos artículos</h2>
+            <div class="clearfix"></div>
             <article>
                 <div class="data">
                     <span>Fecha: 12 dic</span>
