Maquetación del enlace del blog

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -156,7 +156,7 @@
                 <h4><a href="#">Título del artículo</a></h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, quae omnis repudiandae expedita, id totam perspiciatis quisquam dignissimos labore sunt aspernatur accusamus natus placeat, sint officiis tempore. Quidem, dolore enim. Molestiae laboriosam amet excepturi inventore ipsa nesciunt eaque non rem quia dicta consectetur, iure ad eius vel dolores pariatur qui.</p>
             </article>
-            <article><a href="#">Ir al blog</a></article>
+            <article id="blog"><a href="#">Ir al blog</a></article>
         </section>
 
         <!-- Fin Artículos -->
