Maquetación del footer

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -165,7 +165,7 @@
     <div class="clearfix"></div>
     <footer id="footer">
         <div class="wrap">
-            <nav id="menu_footer">
+            <div id="menu_footer">
                 <h5>MENÚ</h5>
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -173,9 +173,11 @@
                     <li><a href="#">FORMACIÓN</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
-            </nav>
-            <div id="location">¿DÓNDE ESTAMOS?</div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95402.24738770166!2d-0.8890852655631671!3d41.64882263352195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914dd5e618e91%3A0x49df13f1158489a8!2sZaragoza!5e0!3m2!1ses!2ses!4v1614252963592!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div id="location">
+                <h5>¿DÓNDE ESTAMOS?</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95402.24738770166!2d-0.8890852655631671!3d41.64882263352195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914dd5e618e91%3A0x49df13f1158489a8!2sZaragoza!5e0!3m2!1ses!2ses!4v1614252963592!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
             <div id="info">
                 <h5>Desarrollado con</h5>
                 <p><img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt=""></p>
