--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -95,14 +95,17 @@
             </div>
             <h3>REDES SOCIALES</h3>
             <div id="social" class="aside-box">
-                <div class="icon">
-                    <a href="#">t</a>
+                <div class="twitter">
+                    <a href="#" class="icon">t</a>
+                    <p class="overlay">Twitter</p>
                 </div>
-                <div class="icon">
-                    <a href="#">f</a>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                    <p class="overlay">Facebook</p>
                 </div>
-                <div class="icon">
-                    <a href="#">y</a>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                    <p class="overlay">Youtube</p>
                 </div>
             </div>
             <h3>PATROCINADORES</h3>
