Responsive de las tarjetas

--- a/maquetacion-2-responsive/index.html
+++ b/maquetacion-2-responsive/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="icon" type="favicon/x-icon" href="img/supertux.png">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <!-- Inicio de la Cabecera -->
@@ -68,6 +69,7 @@
             </div>
             <!-- Fin Tarjetas -->
         </section>
+        <div class="clearfix"></div>
         <!-- Inicio Barra lateral -->
         <aside id="lateral">
             <h3>BUSCAR</h3>
