--- a/aprendiendo-sass/index.html
+++ b/aprendiendo-sass/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo SASS con Víctor Robles</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/newstyle.css">
 </head>
 <body>
     <h1>Aprendiendo SASS con Víctor Robles Web</h1>
     <p>SASS es un preprocesador muy popular y potente.</p>
+    <p class="prueba">Texto que usa otra hoja de estilos</p>
+    <div class="caja">
+        <h1>Soy una caja</h1>
+        <p>Soy un párrafo</p>
+        <div class="info">
+            30-01-2021
+            <span class="author">Víctor Robles Web</span>
+        </div>
+    </div>
 </body>
 </html>
