--- a/aprendiendo-sass/index.html
+++ b/aprendiendo-sass/index.html
@@ -20,5 +20,21 @@
             <span class="author">Víctor Robles Web</span>
         </div>
     </div>
+    <div class="listado">
+        <ul>
+            <li>Sass</li>
+            <li>Less</li>
+            <li>Stylus</li>
+        </ul>
+    </div>
+    <div class="alert">
+        Hola, soy una alerta normal.
+    </div>
+    <div class="alert-danger">
+        Hola, soy una alerta de peligro.
+    </div>
+    <div class="alert-success">
+        Hola, soy una alerta de éxito.
+    </div>
 </body>
 </html>
