Operadores en SASS

--- a/aprendiendo-sass/index.html
+++ b/aprendiendo-sass/index.html
@@ -12,14 +12,34 @@
     <h1>Aprendiendo SASS con Víctor Robles Web</h1>
     <p>SASS es un preprocesador muy popular y potente.</p>
     <p class="prueba">Texto que usa otra hoja de estilos</p>
-    <div class="caja">
-        <h1>Soy una caja</h1>
-        <p>Soy un párrafo</p>
-        <div class="info">
-            30-01-2021
-            <span class="author">Víctor Robles Web</span>
+    <div class="cajas">
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un párrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">Víctor Robles Web</span>
+            </div>
         </div>
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un párrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">Víctor Robles Web</span>
+            </div>
+        </div>
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un párrafo</p>
+            <div class="info">
+                30-01-2021
+                <span class="author">Víctor Robles Web</span>
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
+    
     <div class="listado">
         <ul>
             <li>Sass</li>
