--- a/aprendiendo-flexbox/index.html
+++ b/aprendiendo-flexbox/index.html
@@ -17,6 +17,18 @@
         <div class="caja green">Segunda caja</div>
         <div class="caja blue">Tercera caja</div>
         <div class="caja orange">Cuarta caja</div>
+        <div class="caja red">Primera caja</div>
+        <div class="caja green">Segunda caja</div>
+        <div class="caja blue">Tercera caja</div>
+        <div class="caja orange">Cuarta caja</div>
+        <div class="caja red">Primera caja</div>
+        <div class="caja green">Segunda caja</div>
+        <div class="caja blue">Tercera caja</div>
+        <div class="caja orange">Cuarta caja</div>
+        <div class="caja red">Primera caja</div>
+        <div class="caja green">Segunda caja</div>
+        <div class="caja blue">Tercera caja</div>
+        <div class="caja orange">Cuarta caja</div>
     </section>
 
     <p>Hola, soy José Miguel y estoy estudiando el Máster en CSS, el curso más completo de maquetación web</p>
