Fin de la teoría sobre flexbox

--- a/aprendiendo-flexbox/index.html
+++ b/aprendiendo-flexbox/index.html
@@ -20,5 +20,8 @@
     </section>
 
     <p>Hola, soy José Miguel y estoy estudiando el Máster en CSS, el curso más completo de maquetación web</p>
+    <div class="box">
+        <div></div>
+    </div>
 </body>
 </html>
