--- a/maquetacion-3-flexbox/index.html
+++ b/maquetacion-3-flexbox/index.html
@@ -25,6 +25,96 @@
 			</nav>
 		</header>
 		<!-- Fin Cabecera -->
+
+		<!-- Inicio Contenido -->
+		<section id="content">
+			<aside>
+				<h2>¿Qué quieres ver?</h2>
+				<ul>
+					<li><a href="#">Webs</a></li>
+					<li><a href="#">Apps</a></li>
+					<li><a href="#">Diseños</a></li>
+					<li><a href="#">Otros</a></li>
+				</ul>
+			</aside>
+
+			<div id="projects">
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				<article class="project">
+					<div class="image-wrap">
+						<img src="https://via.placeholder.com/250x180" alt="">
+					</div>
+					<div class="project-info">
+						<a href="#">Nombre proyecto</a>
+						<p>Sitio web</p>
+					</div>
+				</article>
+				
+			</div>
+		</section>
+		<!-- Fin Contenido -->
 	</div>
 	<!-- Fin Container -->
 </body>
