Proyecto Flexbox. CSS y Flexbox de los proyectos

--- a/maquetacion-3-flexbox/index.html
+++ b/maquetacion-3-flexbox/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Inicio Contenido -->
 		<section id="content">
-			<aside>
+			<aside id="aside">
 				<h2>¿Qué quieres ver?</h2>
 				<ul>
 					<li><a href="#">Webs</a></li>
