Proyecto Flexbox. Pie de página con Flex

--- a/maquetacion-3-flexbox/index.html
+++ b/maquetacion-3-flexbox/index.html
@@ -115,6 +115,11 @@
 			</div>
 		</section>
 		<!-- Fin Contenido -->
+
+		<footer id="footer">
+			<div class="logo">Portafolio</div>
+			<div class="info">Máster en CSS. Víctor Robles Web &copy;</div>
+		</footer>
 	</div>
 	<!-- Fin Container -->
 </body>
