--- a/aprendiendo-grid-css/index.html
+++ b/aprendiendo-grid-css/index.html
@@ -16,6 +16,9 @@
 		<div class="caja green">Segunda caja</div>
 		<div class="caja blue">Tercera caja</div>
 		<div class="caja pink">Cuarta caja</div>
+		<div class="caja red">Primera caja</div>
+		<div class="caja green">Segunda caja</div>
+		<div class="caja blue">Tercera caja</div>
 	</div>
 
 	<p>Este párrafo no se mueve</p>
