--- a/aprendiendo-grid-css/index.html
+++ b/aprendiendo-grid-css/index.html
@@ -8,6 +8,43 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<!--
+		CABECERA 	(arriiba del todo y que ocupe el 100%)
+			TÍTULO
+		MENU		(debajo de la cabecera y ocupa el 100%)
+		CONTENIDO	(debajo del menú y al lado del lateral)
+		LATERAL		(debajo del menú y a la derecha del contenido)
+		FOOTER		(abajo del todo y ocupe el 100%)
+	-->
+	<div id="website">
+		<header id="cabecera">
+			<h1>Título de mi web</h1>
+		</header>
+		<nav id="menu">
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Página 1</a></li>
+				<li><a href="#">Página 2</a></li>
+				<li><a href="#">Página 3</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</nav>
+
+		<section id="contenido">
+			<article>Artículo 1</article>
+			<article>Artículo 2</article>
+			<article>Artículo 3</article>
+			<article>Artículo 4</article>
+			<article>Artículo 5</article>
+		</section>
+
+		<aside id="lateral">
+			<h2>Barra lateral</h2>
+		</aside>
+
+		<footer id="pie-pagina">Master en CSS con Víctor Robles WEB &copy; victorroblesweb.es</footer>
+	</div>
+	<hr>
 	<h1>Máster en CSS con Víctor Robles WEB</h1>
 	<h2>Hoy aprendemos CSS Grid</h2>
 
