--- a/aprendiendo-grid-css/index.html
+++ b/aprendiendo-grid-css/index.html
@@ -16,6 +16,38 @@
 		LATERAL		(debajo del menú y a la derecha del contenido)
 		FOOTER		(abajo del todo y ocupe el 100%)
 	-->
+
+	<div id="website-areas">
+		<header id="cabecera-area">
+			<h1>Título de mi web</h1>
+		</header>
+		<nav id="menu-area">
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Página 1</a></li>
+				<li><a href="#">Página 2</a></li>
+				<li><a href="#">Página 3</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</nav>
+
+		<section id="contenido-area">
+			<article>Artículo 1</article>
+			<article>Artículo 2</article>
+			<article>Artículo 3</article>
+			<article>Artículo 4</article>
+			<article>Artículo 5</article>
+		</section>
+
+		<aside id="lateral-area">
+			<h2>Barra lateral</h2>
+		</aside>
+
+		<footer id="pie-pagina-area">Master en CSS con Víctor Robles WEB &copy; victorroblesweb.es</footer>
+	</div>
+
+	<hr>
+
 	<div id="website">
 		<header id="cabecera">
 			<h1>Título de mi web</h1>
