--- a/aprendiendo-grid-css/index.html
+++ b/aprendiendo-grid-css/index.html
@@ -19,7 +19,7 @@
 
 	<div id="website-areas">
 		<header id="cabecera-area">
-			<h1>Título de mi web</h1>
+			<h1>Web con áreas</h1>
 		</header>
 		<nav id="menu-area">
 			<ul>
