Primeros pasos con Bootstrap. Primera maquetación básica

--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -21,7 +21,7 @@
 
     <div class="container border">
         <div class="row">
-            <header id="header" class="col-12 bg-primary p-2 pl-4">
+            <header id="header" class="col-12 bg-primary p-5 pl-4 text-white">
                 <h1>Aprendiendo Bootstrap con Víctor Robles</h1>
             </header>
             <nav id="menu" class="col-12 bg-secondary">
@@ -33,6 +33,33 @@
                     <li class="col"><a href="#">Contacto</a></li>
                 </ul>
             </nav>
+            <section id="content" class="col-12">
+                <div class="row">
+                    <section id="products" class="col-9 border">
+                        <h2>Productos</h2>
+                        <hr>
+                        <div class="items row">
+                            <div class="item col-3 bg-primary m-3">Producto</div>
+                            <div class="item col-3 bg-warning m-3">Producto</div>
+                            <div class="item col-3 bg-danger m-3">Producto</div>
+                        </div>
+                        <div class="items row">
+                            <div class="item col-3 bg-primary m-3">Producto</div>
+                            <div class="item col-3 bg-warning m-3">Producto</div>
+                            <div class="item col-3 bg-danger m-3">Producto</div>
+                        </div>
+                        <div class="items row">
+                            <div class="item col-3 bg-primary m-3">Producto</div>
+                            <div class="item col-3 bg-warning m-3">Producto</div>
+                            <div class="item col-3 bg-danger m-3">Producto</div>
+                        </div>
+                    </section>
+                    <aside class="col-3 border">
+                        <h2>Barra lateral</h2>
+                    </aside>
+                </div>
+                
+            </section>
         </div>
     </div>
     
