--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -60,6 +60,9 @@
                 </div>
                 
             </section>
+            <footer class="col-lg-12 bg-info">
+                Master en CSS con Víctor robles Web &copy;
+            </footer>
         </div>
     </div>
     
