Bootstrap. Alineación vertical

--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -62,6 +62,18 @@
                     </section>
                     <aside class="col-3 border">
                         <h2>Barra lateral</h2>
+
+                        <div class="lateral row bg-light align-items-center">
+                            <div class="col-4 bg-primary align-self-start">
+                                Elemento 1
+                            </div>
+                            <div class="col-4 bg-success align-self-center">
+                                Elemento 2
+                            </div>
+                            <div class="col-4 bg-warning align-self-end">
+                                Elemento 3
+                            </div>
+                        </div>
                     </aside>
                 </div>
 
