--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -37,7 +37,7 @@
             </nav>
             <section id="content" class="col-12">
                 <div class="row">
-                    <section id="products" class="col-9 border">
+                    <section id="products" class="col-9 border order">
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
@@ -57,6 +57,12 @@
                                 <div class="item col bg-warning ">Producto</div>
                                 
                             </div>
+                            <div class="row pruoffset">
+                                <div class="item col-3 bg-primary ">Producto</div>
+                                <div class="item col-3 bg-warning ">Producto</div>
+                                <div class="item col-3 bg-danger ">Producto</div>
+                                <div class="item col-1 bg-info offset-1">Producto</div>
+                            </div>
                         </div>
 
                     </section>
@@ -64,13 +70,13 @@
                         <h2>Barra lateral</h2>
 
                         <div class="lateral row bg-light align-items-center">
-                            <div class="col-4 bg-primary align-self-start">
+                            <div class="col-4 bg-primary ">
                                 Elemento 1
                             </div>
-                            <div class="col-4 bg-success align-self-center">
+                            <div class="col-4 bg-success ">
                                 Elemento 2
                             </div>
-                            <div class="col-4 bg-warning align-self-end">
+                            <div class="col-4 bg-warning order-2">
                                 Elemento 3
                             </div>
                         </div>
@@ -83,7 +89,7 @@
             </footer>
         </div>
     </div>
-
+    footer.col-lg-12.bg-info#pie
 </body>
 
 </html>
