Bootstrap. Ocultando elementos

--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -26,7 +26,7 @@
             <header id="header" class="col-12 bg-primary p-5 pl-4 text-white">
                 <h1>Aprendiendo Bootstrap con Víctor Robles</h1>
             </header>
-            <nav id="menu" class="col-12 bg-secondary">
+            <nav id="menu" class="col-12 bg-secondary d-none d-sm-none d-md-block">
                 <ul class="row w-50">
                     <li class="col"><a href="#">Inicio</a></li>
                     <li class="col"><a href="#">Página 1</a></li>
@@ -37,7 +37,7 @@
             </nav>
             <section id="content" class="col-12">
                 <div class="row">
-                    <section id="products" class="col-9 border order">
+                    <section id="products" class="col-12 col-sm-12 col-md-9 border">
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
@@ -66,7 +66,7 @@
                         </div>
 
                     </section>
-                    <aside class="col-3 border">
+                    <aside class="col-3 border d-none d-sm-none d-md-block">
                         <h2>Barra lateral</h2>
 
                         <div class="lateral row bg-light align-items-center">
@@ -89,7 +89,6 @@
             </footer>
         </div>
     </div>
-    footer.col-lg-12.bg-info#pie
 </body>
 
 </html>
