--- a/aprendiendo-bootstrap/index.html
+++ b/aprendiendo-bootstrap/index.html
@@ -21,18 +21,18 @@
     <button class="btn btn-success">Hola, soy un botón</button>
     -->
 
-    <div class="container border">
+    <div class="container-fluid border">
         <div class="row">
             <header id="header" class="col-12 bg-primary p-5 pl-4 text-white">
                 <h1>Aprendiendo Bootstrap con Víctor Robles</h1>
             </header>
             <nav id="menu" class="col-12 bg-secondary">
                 <ul class="row w-50">
-                    <li class="col"><a href="#">Inicio</a></li>
-                    <li class="col"><a href="#">Página 1</a></li>
-                    <li class="col"><a href="#">Página 2</a></li>
-                    <li class="col"><a href="#">Página 3</a></li>
-                    <li class="col"><a href="#">Contacto</a></li>
+                    <li class="col-12 col-sm-12 col-md"><a href="#">Inicio</a></li>
+                    <li class="col-12 col-sm-12 col-md"><a href="#">Página 1</a></li>
+                    <li class="col-12 col-sm-12 col-md"><a href="#">Página 2</a></li>
+                    <li class="col-12 col-sm-12 col-md"><a href="#">Página 3</a></li>
+                    <li class="col-12 col-sm-12 col-md"><a href="#">Contacto</a></li>
                 </ul>
             </nav>
             <section id="content" class="col-12">
@@ -41,6 +41,11 @@
                         <h2>Productos</h2>
                         <hr>
                         <div class="items">
+                            <div class="row nomargin">
+                                <div class="item col col-lg col-md-12 col-sm-12 bg-primary ">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-warning ">Producto</div>
+                                <div class="item col col-lg col-md-6 col-sm-6 bg-danger ">Producto</div>
+                            </div>
                             <div class="row">
                                 <div class="item col bg-primary ">Producto</div>
                                 <div class="item col bg-warning ">Producto</div>
@@ -52,7 +57,7 @@
                                 <div class="item col bg-danger ">Producto</div>
                                 <div class="item col-4 bg-success ">Producto</div>
                             </div>
-                            <div class="pru row mt-1">
+                            <div class="nomargin row mt-1">
                                 <div class="item col bg-primary ">Producto</div>
                                 <div class="item col bg-warning ">Producto</div>
                                 
