Visibilidad de los elementos

--- a/aprendiendo-bootstrap/Herramientas.html
+++ b/aprendiendo-bootstrap/Herramientas.html
@@ -16,13 +16,17 @@
     <div class="container pru">
         <h1>Herramientas disponibles en Bootstrap 4</h1>
         <hr>
-        <div class="text-muted lightblue float-left caja w-25 h-50 border border-success rounded">
+        <div class="m-2 p-3 text-muted bg-light float-left caja w-25 h-50 border border-success ">
             Esto es una caja
         </div>
-        <div class="bg-danger float-left caja w-25 h-50 border border-primary rounded">
+        <div class="m-2 p-3 text-white bg-danger float-left caja w-25 h-50 border border-primary ">
             Esto es una caja
         </div>
-        <div class="bg-warning float-md-left float-sm-right caja w-25 h-50 border border-dark rounded">
+        <div class="m-2 p-3 text-secondary bg-warning float-md-left float-sm-right caja w-25 h-50 border border-dark ">
+            Esto es una caja
+        </div>
+        <div class="clearfix"></div>
+        <div class="visible shadow-lg mx-auto p-3 text-light bg-success caja w-25 h-50 border border-dark rounded">
             Esto es una caja
         </div>
         <div class="clearfix"></div>
