Textos en Bootstrap

--- a/aprendiendo-bootstrap/Herramientas.html
+++ b/aprendiendo-bootstrap/Herramientas.html
@@ -32,6 +32,9 @@
         <div class="clearfix"></div>
         <hr>
         <h2>Esto es el fin del contenedor</h2>
+        <hr>
+
+        <p class="display-4 font-italic text-center text-capitalize">Esto es un texto de prueba</p>
     </div>
     
 </body>
