Componentes de Bootstrap. Barra de navegación

--- a/aprendiendo-bootstrap/Herramientas.html
+++ b/aprendiendo-bootstrap/Herramientas.html
@@ -34,7 +34,14 @@
         <h2>Esto es el fin del contenedor</h2>
         <hr>
 
-        <p class="display-4 font-italic text-center text-capitalize">Esto es un texto de prueba</p>
+        <p class="display-4 font-italic text-center "><span>ESTO</span>  es un texto de prueba. <span class="firstmay">pero también aplica dentro</span></p>
+        
+            <pre>
+                if($hola == "mundo"){
+                    echo "Hola mundo";
+                }
+            </pre>
+        <kbd>Control + D     </kbd> para volver al escritorio
     </div>
     
 </body>
