--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -15,7 +15,7 @@
 	<div class="container pru">
 		<div class="row">
 			<header class="col-md-12 mt-12">
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 					<a class="navbar-brand" href="#">Componentes</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					  <span class="navbar-toggler-icon"></span>
@@ -43,15 +43,57 @@
 						<li class="nav-item">
 						  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 						</li>
+                        <li class="nav-item">
+                            <form class="form-inline mx-2 my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </li>
 					  </ul>
-					  <form class="form-inline my-2 my-lg-0">
-						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-					  </form>
+                      <ul class="navbar-nav">
+
+                      </ul>
+					  <ul class="navbar-nav ">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              José Miguel
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="Ejemplos.html" title="Ejemplos varios de Bootstrap">Ejemplos</a>
+                              <a class="dropdown-item" href="Herramientas.html" title="Herramientas y utilidades de Bootstrap">Herramientas</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                      </ul>
 					</div>
 				  </nav>
+                  
+                  <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                      <li class="breadcrumb-item"><a href="#">Desarrollo web</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Componentes de Bootstrap 4</li>
+                    </ol>
+                  </nav>
 			</header>
 		</div>
+        <div class="row mt-3">
+            <div class="col-md-6">
+                <div class="alert alert-danger alert-dismissible fade show" ><strong>
+                    ¡¡Increible!!</strong>, te has registrado correctamente
+                    <button type="button" class="close" data-dismiss="alert" aria-label="close"><span aria-hidden="true">&times;</span></button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+            </div>
+        </div>
 	</div>
 </body>
 </html>
