Tarjetas y otros componentes

--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -67,9 +67,9 @@
                         </li>
                       </ul>
 					</div>
-				  </nav>
+				</nav>
                   
-                  <nav aria-label="breadcrumb">
+                <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="#">Inicio</a></li>
                       <li class="breadcrumb-item"><a href="#">Desarrollo web</a></li>
@@ -79,19 +79,48 @@
 			</header>
 		</div>
         <div class="row mt-3">
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="alert alert-danger alert-dismissible fade show" ><strong>
                     ¡¡Increible!!</strong>, te has registrado correctamente
                     <button type="button" class="close" data-dismiss="alert" aria-label="close"><span aria-hidden="true">&times;</span></button>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
                     <strong>Holy guacamole!</strong> You should check in on some of those fields below.
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
-                  </div>
+                </div>
+            </div>
+        </div>
+        <h2><span class="badge badge-success">NUEVO</span> Componentes de Bootstrap</h2>
+        <p><a href="#" class="badge badge-warning badge-pill">Artículo nuevo</a> Bicicleta de dos ruedas</p>
+
+        <div class="row col-8">
+            <div class="card col p-0 mr-2">
+                <img src="https://via.placeholder.com/300x200" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="card-img-top">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta 1</h3>
+                    <p class="card-text">Hola, entra a este artículo y aprenderás Bootstrap</p>
+                    <a href="" class="btn btn-success">Entrar</a>
+                </div>
+            </div>
+            <div class="card col p-0 mr-2">
+                <img src="https://via.placeholder.com/300x200" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="card-img-top">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta 2</h3>
+                    <p class="card-text">Hola, entra a este artículo y aprenderás Bootstrap</p>
+                    <a href="" class="btn btn-warning">Entrar</a>
+                </div>
+            </div>
+            <div class="card col p-0">
+                <img src="https://via.placeholder.com/300x200" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="card-img-top">
+                <div class="card-body">
+                    <h3 class="card-title">Tarjeta 3</h3>
+                    <p class="card-text">Hola, entra a este artículo y aprenderás Bootstrap</p>
+                    <a href="" class="btn btn-info">Entrar</a>
+                </div>
             </div>
         </div>
 	</div>
