--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -68,14 +68,25 @@
                       </ul>
 					</div>
 				</nav>
-                  
-                <nav aria-label="breadcrumb">
+                
+                <div aria-label="breadcrumb mt-2">
                     <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                      <li class="breadcrumb-item"><a href="#">Desarrollo web</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Componentes de Bootstrap 4</li>
+                        <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                        <li class="breadcrumb-item"><a href="#">Desarrollo web</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Componentes de Bootstrap 4</li>
                     </ol>
-                  </nav>
+                </div>
+ 
+                <!-- SLIDER -->
+
+                <div id="slider" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://via.placeholder.com/900x350" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="d-block w-100">
+                        </div>
+                    </div>
+                </div>
+                <!-- FIN SLIDER -->
 			</header>
 		</div>
         <div class="row mt-3">
