--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -69,7 +69,7 @@
 					</div>
 				</nav>
                 
-                <div aria-label="breadcrumb mt-2">
+                <div aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Inicio</a></li>
                         <li class="breadcrumb-item"><a href="#">Desarrollo web</a></li>
@@ -78,13 +78,50 @@
                 </div>
  
                 <!-- SLIDER -->
-
-                <div id="slider" class="carousel slide" data-ride="carousel">
+                <script>
+                    $(document).ready(function(){
+                        $(".carousel").carousel({
+                            interval: 0
+                        });
+                    });
+                </script>
+                <div id="slider" class="carousel slide" data-ride="carousel" data-interval="false">
+                    <ol class="carousel-indicators">
+                        <li data-target="#slider" data-slide-to="0"></li>
+                        <li data-target="#slider" data-slide-to="1"></li>
+                        <li data-target="#slider" data-slide-to="2"></li>
+                    </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/900x350" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="d-block w-100">
+                            <img src="images/cenote-ik-kil-yucatan-mexico-1440x810.jpg" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="d-block w-100">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Cenote Ik Kil, Yucatán, México</h5>
+                                <p>El cenote Ik Kil se localiza en Yucatán, México, y es uno de los más hermosos de esta zona. Estos hundimientos son frecuentemente aprovechados por los turistas para bañarse y disfrutar de las vistas.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/el-florido-jardin-publico-de-boston-massachusetts-1440x810.jpg" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="d-block w-100">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>El florido Jardín Público de Boston, Massachusetts</h5>
+                                <p>Si te encuentras en Boston y quieres descansar del ruido de una ciudad tan grande, te recomendamos dar un tranquilo paseo por el Jardín Publico, donde encontramos una estatua de George Washington.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada-1440x810.jpg" alt="Imagen de ejemplo" title="Imagen de ejemplo" class="d-block w-100">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lago Moraine. Canadá</h5>
+                                <p>El lago Moraine es un lago de montaña localizado en el Parque Nacional Banff, en Alberta, Canadá.</p>
+                            </div>
                         </div>
                     </div>
+                    <a href="#slider" class="carousel-control-prev" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+                    <a href="#slider" class="carousel-control-next" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Siguiente</span>
+                    </a>
                 </div>
                 <!-- FIN SLIDER -->
 			</header>
