--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -10,8 +10,8 @@
     <!-- <script type="text/javascript" src="plugins/jQuery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="plugins/bootstrap-4.6.0-dist/js/bootstrap.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
 
 </head>
@@ -178,7 +178,19 @@
                             <a href="" class="btn btn-info">Entrar</a>
                         </div>
                     </div>
-
+                    
+                </div>
+                <div class="row">
+                    <nav aria-label="pagination">
+                        <ul class="pagination">
+                            <li class="page-item"><a href="#" class="page-link">&laquo;</a></li>
+                            <li class="page-item"><a href="#" class="page-link">1</a></li>
+                            <li class="page-item"><a href="#" class="page-link">2</a></li>
+                            <li class="page-item"><a href="#" class="page-link">3</a></li>
+                            <li class="page-item"><a href="#" class="page-link">4</a></li>
+                            <li class="page-item"><a href="#" class="page-link">&raquo;</a></li>
+                        </ul>
+                    </nav>
                 </div>
                 <div class="row">
                     <div class="jumbotron col-md-12">
@@ -221,7 +233,29 @@
                         </div>
                     </div>
                 </div>
+                <!-- COLLAPSE -->
+                <a href="#informacion" class="btn btn-success" data-toggle="collapse" role="button">Mostrar información</a>
+                <div class="collapse" id="informacion">
+                    <div class="card card-body bg-dark text-white mt-2">Ésta es la información oculta</div>
+                </div>
+
+                <!-- BARRA PROGRESO-->
+                <div class="progress mt-3">
+                    <div id="barra-progreso" class="progress-bar bg-success" style="width: 30%;" role="progressbar">
+                        30%
+                    </div>
+                </div>
+                <script>
+                    var contador = 0;
+                    setInterval(function(){
+                        contador++;
+                        let progreso = document.querySelector("#barra-progreso");
+                        progreso.style.width = contador + '%';
+                        progreso.innerHTML = contador + '%';
+                    }, 1000);
+                </script>
             </div>
+            
         </div>
 
 	</div>
