--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -88,6 +88,9 @@
                         $(".carousel").carousel({
                             interval: 10000
                         });
+
+                        $('[data-toggle="tooltip"]').tooltip();
+                        $('[data-toggle="popover"]').popover();
                     });
                 </script>
                 <div id="slider" class="carousel slide" data-ride="carousel" data-interval="false">
@@ -221,10 +224,10 @@
                         </div>
                         <div class="modal-body">
                             <p>Una vez cerrada la podrás abrir muchas más veces :-)</p>
-                            <p>This <a href="#" role="button" class="btn btn-secondary popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">button</a> triggers a popover on click.</p>
+                            <p>This <a href="#" role="button" class="btn btn-secondary popover-test" data-toggle="popover" title="Popover title" data-content="Popover body content is set in this attribute.\n Nueva línea">button</a> triggers a popover on click.</p>
                             <hr>
                             <h5>Tooltips in a modal</h5>
-                            <p><a href="#" class="tooltip-test" title="Tooltip">This link</a> and <a href="#" class="tooltip-test" title="Tooltip">that link</a> have tooltips on hover.</p>
+                            <p><a href="#" class="tooltip-test" title="Tooltip por la derecha"  data-toggle="tooltip" data-placement="right">This link</a> and <a href="#" class="tooltip-test" title="Tooltip por arriba"  data-toggle="tooltip" data-placement="top">that link</a> have tooltips on hover.</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -241,19 +244,24 @@
 
                 <!-- BARRA PROGRESO-->
                 <div class="progress mt-3">
-                    <div id="barra-progreso" class="progress-bar bg-success" style="width: 30%;" role="progressbar">
-                        30%
+                    <div id="barra-progreso" class="progress-bar bg-success" style="width: 0%;" role="progressbar">
+                        0%
                     </div>
                 </div>
                 <script>
                     var contador = 0;
                     setInterval(function(){
-                        contador++;
+                        contador = (contador + 1) % 101;
                         let progreso = document.querySelector("#barra-progreso");
                         progreso.style.width = contador + '%';
                         progreso.innerHTML = contador + '%';
                     }, 1000);
                 </script>
+
+                <button type="button" class="btn-tool btn btn-danger mt-3" data-toggle="tooltip" data-placement="bottom" title="Si das click mostrarás una alerta por abajo">Alerta</button>
+                <button type="button" class="btn-tool btn btn-secondary mt-3" data-toggle="tooltip" data-placement="top" title="Si das click mostrarás una alerta por arriba">Alerta 2</button>
+                <button type="button" class="btn-tool btn btn-warning mt-3" data-toggle="tooltip" data-placement="right" title="Si das click mostrarás una alerta por la derecha">Alerta 4</button>
+                <button type="button" class="btn-tool btn btn-success mt-3" data-toggle="tooltip" data-placement="left" title="Si das click mostrarás una alerta por la izquierda">Alerta 3</button>
             </div>
             
         </div>
