--- a/aprendiendo-bootstrap/componentes.html
+++ b/aprendiendo-bootstrap/componentes.html
@@ -224,7 +224,7 @@
                         </div>
                         <div class="modal-body">
                             <p>Una vez cerrada la podrás abrir muchas más veces :-)</p>
-                            <p>This <a href="#" role="button" class="btn btn-secondary popover-test" data-toggle="popover" title="Popover title" data-content="Popover body content is set in this attribute.\n Nueva línea">button</a> triggers a popover on click.</p>
+                            <p>This <a href="#" role="button" class="btn btn-secondary popover-test" data-toggle="popover" title="Título del Popover" data-html="false" data-content="<p>Popover body content is set in this attribute.</p><p> Nueva línea</p>">button</a> triggers a popover on click.</p>
                             <hr>
                             <h5>Tooltips in a modal</h5>
                             <p><a href="#" class="tooltip-test" title="Tooltip por la derecha"  data-toggle="tooltip" data-placement="right">This link</a> and <a href="#" class="tooltip-test" title="Tooltip por arriba"  data-toggle="tooltip" data-placement="top">that link</a> have tooltips on hover.</p>
@@ -262,10 +262,67 @@
                 <button type="button" class="btn-tool btn btn-secondary mt-3" data-toggle="tooltip" data-placement="top" title="Si das click mostrarás una alerta por arriba">Alerta 2</button>
                 <button type="button" class="btn-tool btn btn-warning mt-3" data-toggle="tooltip" data-placement="right" title="Si das click mostrarás una alerta por la derecha">Alerta 4</button>
                 <button type="button" class="btn-tool btn btn-success mt-3" data-toggle="tooltip" data-placement="left" title="Si das click mostrarás una alerta por la izquierda">Alerta 3</button>
+                <hr>
+
+                <h3>Formulario</h3>
+                <form action="">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text rounded-0">Nombre</span>
+                        </div>
+                        <input type="text" name="" id="" class="form-control" placeholder="Introduce el nombre">
+                    </div>
+
+                    <div class="input-group mt-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text rounded-0">Género</span>
+                        </div>
+                        <select name="" id="" class="form-control">
+                            <option value="Hombre">Hombre</option>
+                            <option value="Mujer">Mujer</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="">Email</label>
+                        <input type="email" name="" id="" class="form-control" placeholder="Introduce el email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="">Contraseña</label>
+                        <input type="password" name="" id="" class="form-control" placeholder="Introduce el password">
+                    </div>
+
+                    <input type="submit" class="btn btn-success">
+                </form>
             </div>
             
         </div>
-
+        <table class="table table-striped table-bordered table-hover my-5">
+            <thead class="thead-light">
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellidos</th>
+                    <th>Edad</th>
+                </tr>
+            </thead>
+            
+            <tr>
+                <td>Juan</td>
+                <td>López</td>
+                <td>40</td>
+            </tr>
+            <tr>
+                <td>David</td>
+                <td>Martínez</td>
+                <td>27</td>
+            </tr>
+            <tr>
+                <td>Paco</td>
+                <td>Jiménez</td>
+                <td>48</td>
+            </tr>
+        </table>
 	</div>
 </body>
 </html>
